Enable rng-tools by default for fasten entropy

--- a/modules/install-cfssl/cfssl.service
+++ b/modules/install-cfssl/cfssl.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=Cfssl simple pki
+Wants=rngd.service rng-tools.service
+After=rngd.service rng-tools.service
 After=%AFTER%
 
 [Service]
